<?xml version="1.0"?>
<package format="3">
  <name>depthai_examples</name>
  <version>2.9.0</version>
  <description>The depthai_examples package</description>

  <maintainer email="sachin@luxonis.com">Sachin Guruswamy</maintainer>
  <author>Sachin Guruswamy</author>

  <license>MIT</license>

  <!-- Build tool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Package dependencies -->
  <depend>rclcpp</depend>
  <depend>cv_bridge</depend>
  <depend>camera_info_manager</depend>
  <depend>depthai</depend>
  <depend>depthai_ros_msgs</depend>
  <depend>depthai_bridge</depend>
  <depend>depthai_descriptions</depend>
  <depend>image_transport</depend>
  <depend>libopencv-dev</depend>
  <depend>ros_environment</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>stereo_msgs</depend>
  <depend>vision_msgs</depend>

  <!-- Execution dependencies -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>depth_image_proc</exec_depend>
  <exec_depend>xacro</exec_depend>

  <!-- Export information -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
